# mtrl

./: pyproject.toml
experiments/: atari.py  cw10_mtmhsac.py  mt10_v1_mtmhsac.py  mt10_v2_mtmhsac.py  mt1_peg_insert_side.py  paths.py
experiments/misc/: example.py  mt10_mtmhsac_cagrad.py  mt10_mtmhsac_gradnorm.py  mt10_mtmhsac_paco_v1_params_5_layers.py  mt10_mtmhsac_v1_moore_params_3_layers_use_task_weights_false.py  mt10_mtmhsac_v1_soft_modules_params_3_layers_exponential_norm.py  mt10_mtmhsac_v2_wide_actor.py  mt10_mtmhsac_v2_wide_actor_shrunk_critic.py  mt10_mtmhsac_v2_wide_critic.py  mt10_mtmhsac_v2_wide_critic_shrunk_actor.py  mt10_mtsac_v1.py  mt10_mtsac_v2.py  mt10_mtsac_v2_moore_params.py  mt10_mtsac_v2_paco_params.py  mt10_mtsac_v2_sm_params.py  mt25_mtmhsac_v2.py  mt50_film.py  mt50_mtmhsac_moore_params_v2.py  mt50_mtmhsac_sm_params_v2.py  mt50_mtmhsac_v2.py  mt50_mtmhsac_v2_2048.py  mt50_mtmhsac_v2_4096.py  mt50_soft_modules.py
experiments/single_task/: mt1.py  mt1_uvfa.py
experiments/width_scaling/: humanoidbench_mtmhsac_v2_0512.py  mt10_mtmhsac_v2_0256.py  mt10_mtmhsac_v2_0512.py  mt10_mtmhsac_v2_1024.py  mt10_mtmhsac_v2_2048.py  mt10_mtmhsac_v2_4096.py  mt50_mtmhsac_v2_0512.py
mtrl/: checkpoint.py  experiment.py  types.py
mtrl/config/: networks.py  nn.py  optim.py  rl.py
mtrl/envs/: __init__.py  atari.py  atari.py.save  base.py  humanoidbench.py  metaworld.py
mtrl/monitoring/: metrics.py
mtrl/nn/: .base.py.swp  __init__.py  augmentation.py  base.py  bro.py  care.py  distributions.py  impala.py  moore.py  (+2 more)
tests/: test_rl_buffers.py
(+13 files in other folders)
