[project]
name = "mtrl"
version = "0.1.0"
description = "Codebase for ablating MTRL"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "altair[all]>=5.5.0",
    "distrax>=0.1.5",
    "flax>=0.9.0",
    "gymnasium>=1.0.0",
    "jaxtyping>=0.2.34",
    "matplotlib>=3.10.0",
    "metaworld",
    "numpy>=2.1.2",
    "opencv-python>=4.11.0.86",
    "orbax-checkpoint>=0.7.0",
    "tyro>=0.8.11",
    "wandb>=0.18.5",
    "gymnasium[atari]>=0.29",
    "ale-py>=0.8",
]

[project.optional-dependencies]
cpu = ["jax>=0.5.0"]
# https://github.com/jax-ml/jax/issues/27062
metal = ["jax<=0.5.0", "jax-metal>=0.1.0; sys_platform == 'darwin'"]
cuda12 = ["jax[cuda12]>=0.5.0"]
tpu = ["jax[tpu]>=0.5.0"]
testing = [
    "chex>=0.1.89",
    "pytest>=8.3.5",
]

[tool.uv]
prerelease = "allow"
conflicts = [
  [
    { extra = "cpu" },
    { extra = "metal" },
    { extra = "cuda12" },
    { extra = "tpu" },
  ],
]

[tool.uv.sources]
metaworld = { git = "https://github.com/reginald-mclean/Metaworld.git", rev = "release" }

[tool.ruff]
ignore = ["F722"]
ignore-init-module-imports = true

[tool.setuptools.packages.find]
include = ["mtrl", "mtrl.*"]

